# insights

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
reference/: 001_add_description.py  AGENTIC.md  assemblyAI.py  backfill_descriptions.py  describe.py  doc_to_pdf.py  examples.md  loop.py  tools.py
src/insights/: __init__.py  __main__.py  cli.py  config.py  context.py  describe.py  summarize.py  text_export.py  title.py
src/insights/agent/: __init__.py  anthropic_tool_use.py  loop.py  resolve.py  tools.py
src/insights/chat/: __init__.py  save.py  session.py
src/insights/ingest/: __init__.py  detect.py  docling_extractor.py  firecrawl_extractor.py  pipeline.py  tweet_extractor.py  youtube_extractor.py
src/insights/llm/: __init__.py  clients.py  routing.py  types.py
src/insights/retrieval/: __init__.py  chunking.py  embeddings.py  fts.py  search.py  store.py
src/insights/storage/: __init__.py  db.py  migrations.py  models.py
src/insights/utils/: __init__.py  hashing.py  progress.py  text.py  tokens.py
tests/: test_agent_resolve.py  test_cli_routing.py  test_ingest_metadata_guarantees.py  test_llm_routing.py  test_max_context_chars.py  test_persist_one_shot_ask.py  test_summarize_map_reduce.py  test_tokens.py
